<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Device -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tvDeviceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_device"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnChangeDevice"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:drawableTop="@drawable/ic_baseline_list_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceTitle"
            android:text="@string/unknown_device"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvDeviceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceName"
            android:text="@string/unknown_address"
            android:textStyle="italic"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Firmware server -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutFirmwareServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutDevice"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tvFirmwareServerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_firmware_server"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnChangeFirmwareServer"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_baseline_drive_folder_upload_24"
            app:layout_constraintStart_toEndOf="@+id/tvFirmwareServerTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSelectFirmwareServer"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:drawableTop="@drawable/ic_baseline_list_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFirmwareServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnChangeFirmwareServer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Available firmware -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAvailableFirmware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutFirmwareServer"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tvAvailableFirmwareTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_available_firmware"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnRefreshAvailableFirmware"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:drawableTop="@drawable/ic_baseline_refresh_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollViewFwTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvAvailableFirmwareTitle">

            <TableLayout
                android:id="@+id/tableAvailableFirmware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"/>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Device details -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDeviceDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutAvailableFirmware"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tvDeviceDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_device_details"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnRefreshDeviceDetails"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:drawableTop="@drawable/ic_baseline_refresh_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollViewDeviceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceDetailsTitle">

            <TableLayout
                android:id="@+id/tableDeviceDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"/>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Update progress -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUpdateProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutDeviceDetails"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btnUpdatePossible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/button_update_possible"/>

        <Button
            android:id="@+id/btnUpdateFirmware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdatePossible"
            android:text="@string/button_update_firmware"/>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdateFirmware">

            <TextView
                android:id="@+id/tvStatusBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:minHeight="100dp"
                app:layout_constraintTop_toBottomOf="parent" />
        </ScrollView>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            tools:layout_editor_absoluteX="4dp" />

        <TextView
            android:id="@+id/tvProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
